<resources>
    <string name="app_name">PracticaFormularios</string>
    <string name="btnSave">Guardar</string>
    <string name="rdbMorning">Mañana</string>
    <string name="rdbAfternoon">Tarde</string>
    <string name="rdbIndifferent">Indiferente</string>
    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="javascript">JavaScript</string>
    <string name="schedule">Horario: </string>
    <string name="course">Cursos: </string>
    <string name="txvTitle">Solicitud Recibida con los siguientes datos: </string>
    <string name="btnClose">Cerrar</string>
</resources>
